Adjusted alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,7 @@ html {
 html,
 body {
   font-family: 'Righteous', sans-serif;
-  color: #deeef4;
+  color: #172a3a;
 }
 h1,
 h2 {
@@ -175,18 +175,8 @@ h2 {
 h3 {
   font-size: 1.8rem;
 }
-@media (min-width: 550px) {
-  h3 {
-    font-size: 2.4rem;
-  }
-}
 p {
-  font-size: 1.2rem;
-}
-@media (min-width: 500px) {
-  p {
-    font-size: 1.8rem;
-  }
+  font-size: 1.8rem;
 }
 .container {
   min-width: 500px;
@@ -231,6 +221,7 @@ body .container .head .intro-content .title-text {
   height: 100px;
   font-size: 4.8rem;
   text-decoration: none;
+  color: #deeef4;
 }
 body .container .about-us {
   display: flex;
@@ -244,6 +235,7 @@ body .container .about-us {
 body .container .about-us h2 {
   display: flex;
   justify-content: center;
+  width: 100%;
   padding: 2%;
 }
 body .container .about-us p {
@@ -310,6 +302,9 @@ body .container footer nav a {
   color: #004346;
   padding: 5px;
 }
+body {
+  background-color: #07b5b5;
+}
 body .navigation {
   display: flex;
   justify-content: space-between;
@@ -333,12 +328,8 @@ body .navigation .about a {
 }
 body .main-content {
   padding-top: 5%;
-  border: 1px solid darkblue;
   display: flex;
   flex-direction: column;
-}
-body .main-content h1 {
-  border: 2px solid black;
 }
 body .main-content img {
   margin: 3%;
@@ -362,10 +353,11 @@ body .main-content .topmember .members-pl p {
 }
 body .main-content .secondmembers {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   text-align: center;
-  height: 800px;
-  border: 2px solid darkblue;
+  height: 700px;
 }
 body .main-content .secondmembers h1 {
   width: 100%;
@@ -380,8 +372,14 @@ body .main-content .secondmembers .members-wrII p {
 }
 body .main-content .thirdmembers {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   text-align: center;
+  height: 700px;
+}
+body .main-content .thirdmembers h1 {
+  width: 100%;
 }
 body .main-content .thirdmembers .members-wrI {
   width: 47%;
@@ -390,11 +388,18 @@ body .main-content .thirdmembers .members-wrI {
 }
 body .main-content .thirdmembers .members-wrI p {
   margin-top: 2%;
+  width: 95%;
 }
 body .main-content .bottommembers {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   text-align: center;
+  height: 700px;
+}
+body .main-content .bottommembers h1 {
+  width: 100%;
 }
 body .main-content .bottommembers .members-web {
   width: 47%;
@@ -403,4 +408,15 @@ body .main-content .bottommembers .members-web {
 }
 body .main-content .bottommembers .members-web p {
   margin-top: 2%;
+  width: 95%;
+}
+body footer {
+  display: flex;
+  justify-content: center;
+}
+body footer a {
+  font-size: 1.6rem;
+  padding: 15px;
+  text-decoration: none;
+  color: #004346;
 }
