--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,4 +1,5 @@
 body {
+    background-color: @header-font-color;
 
     .navigation {
         display: flex;
@@ -28,13 +29,8 @@ body {
 
     .main-content {
         padding-top: 5%;
-        border: 1px solid darkblue;
         display: flex;
         flex-direction: column;
-
-        h1 {
-            border: 2px solid black;
-        }
 
         img {
             margin: 3%;
@@ -64,10 +60,11 @@ body {
 
         .secondmembers {
             display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
             align-items: center;
             text-align: center;
-            height: 800px;
-            border: 2px solid darkblue;
+            height: 700px;
 
             h1 {
                 width: 100%;
@@ -77,7 +74,6 @@ body {
                 width: 47%;
                 height: 500px;
                 justify-content: center;
-
                 p {
                     margin-top: 2%;
                 }
@@ -86,8 +82,15 @@ body {
 
         .thirdmembers {
             display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
             align-items: center;
             text-align: center;
+            height: 700px;
+
+            h1 {
+                width: 100%;
+            }
 
             .members-wrI {
                 width: 47%;
@@ -96,14 +99,22 @@ body {
 
                 p {
                     margin-top: 2%;
+                    width: 95%;
                 }
             }
         }
 
         .bottommembers {
             display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
             align-items: center;
             text-align: center;
+            height: 700px;
+
+            h1 {
+                width: 100%;
+            }
 
             .members-web {
                 width: 47%;
@@ -112,8 +123,21 @@ body {
 
                 p {
                     margin-top: 2%;
+                    width: 95%;
                 }
             }
+        }
+    }
+
+    footer {
+        display: flex;
+        justify-content: center;
+
+        a {
+            font-size: 1.6rem;
+            padding: 15px;
+            text-decoration: none;
+            color: @background-color;
         }
     }
 }
