--- a/less/global.less
+++ b/less/global.less
@@ -9,7 +9,7 @@ html {
 
 html, body {
     font-family: 'Righteous', sans-serif;
-    color: @main-border-color;
+    color: @font-color;
     // font-size: 1.6rem;
 }
 
@@ -28,18 +28,10 @@ h2 {
 
 h3{
     font-size: 1.8rem;
-
-    @media (min-width: 550px) {
-        font-size: 2.4rem;
-    }
 }
 
 p {
-    font-size: 1.2rem;
-
-    @media (min-width: 500px) {
-        font-size: 1.8rem;
-    }
+    font-size: 1.8rem;
 }
 
 .container {
