--- a/less/home-page.less
+++ b/less/home-page.less
@@ -49,6 +49,7 @@ body {
                 height: 100px;
                 font-size: 4.8rem;
                 text-decoration: none;
+                color: @main-border-color;
             }
         }
 
@@ -62,6 +63,7 @@ body {
             h2 {
                 display: flex;
                 justify-content: center;
+                width: 100%;
                 padding: 2%;
             }
 
