--- a/less/variables.less
+++ b/less/variables.less
@@ -6,6 +6,7 @@
 @main-border-color: @lightgrayishblue;
 @border-color: @darkcyan;
 @background-color: @verydarkcyan;
+@font-color: @verydarkblue;
 
 
 
